# VMM

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  EXTENSIONS.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCRIPTS_GUIDE.md  START_HERE.md  STOP  start.sh  stop.sh
docs/: ADITYA_CODE_EXPLAINED.md  API.md  CODE_EXPLANATIONS_INDEX.md  DESIGN.md  GAURANG_CODE_EXPLAINED.md  KARTIK_CODE_EXPLAINED.md  TESTPLAN.md  VIVEK_CODE_EXPLAINED.md
gui/: README.md  app.js  index.html  simulator.js  style.css
src/: frame.c  frame.h  main.c  metrics.c  metrics.h  pagetable.c  pagetable.h  replacement.c  replacement.h  swap.c  swap.h  tlb.c  tlb.h  trace.c  trace.h  trace_gen.c  util.c  util.h  vmm.c  vmm.h
tests/: run_tests.sh
traces/: simple.trace
